--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,117 @@
-body {
-    background-color: rgb(187, 166, 233);
+body{
+    padding-top: 15px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    height: 110vh;
+    background-color: rgb(236, 193, 255);
+    font-family: Lucida Handwriting, cursive;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+img {
+    border: 5px solid rgb(194, 191, 201);
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+#quote{
+    font-size: 40px;
+}
+
+#dropdown-container{
+    margin-top: 15px;
+    font-size: 25px;
+}
+
+#quote-dropdown {
+  /* height: 30px */
+  position: absolute;
+  background-color: #f9f9f9;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 12px;
+}
+
+
+
+#comment-list{
+    list-style: none;
+}
+
+li {
+    background-color: white;
+    border-radius: 5px;
+    border: 1px solid black;
+    padding: 20px;
+    margin-bottom: 20px;
+  }
+
+#comment-container{
+    width: 600px;
+    min-height: 350px;
+    height: 100%;
+    overflow: auto;
+    border: 2px solid #333;
+    margin: auto;
+    margin-top: 40px;
+    padding: 15px 35px;
+    background-color: whitesmoke;
+}
+
+
+#post-container{
+    margin-top: 30px;
+}
+
+.container{
+    width: 600px;
+    border: 2px solid #333;
+    margin: auto;
+    padding: 15px 35px;
+    background-color: whitesmoke;
+}
+
+.container h2{
+    text-align: center;
+    margin-bottom: 25px
+}
+
+textarea{
+    height: 20px;
+    width: 100%;
+    border: none;
+    border-bottom: 2px solid #aaa;
+    background-color: transparent;
+    margin-bottom: 10px;
+    resize: none;
+    outline: none;
+    transition: .5s
+}
+
+input[type="submit"] {
+    padding: 10px 15px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    text-transform: uppercase;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+input[type="submit"]{
+    color: black;
+    background-color: whitesmoke;
+}
+
+button{
+    padding: 3px 8px;
+    border-radius: 5px;
+    color: #fff;
+    background-color: black;
+}
+
+.btn{
+    display: block;
 }
